--- a/saily/pubspec.yaml
+++ b/saily/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_battery_indicator: ^1.1.0
   # this is importantant for camera usage on android
   camera: ^0.10.0+2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
