--- a/saily/pubspec.yaml
+++ b/saily/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # this is importantant for camera usage on android
   camera: ^0.10.0+2
   share: ^2.0.4
+  syncfusion_flutter_gauges: ^26.2.14
 
 dev_dependencies:
   flutter_test:
