test: added test and stresstest

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -2,4 +2,10 @@ run:
 	npm start
 
 test:
-	cd tests && ./run.sh
+	./runtest.py tests 0
+
+test_out:
+	./runtest.py tests 1
+
+stress:
+	./runstress.py tests 0
