--- a/Server/package.json
+++ b/Server/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "TODO: testing in development",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "GiovanniRasera",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "lodash": "^4.17.21",
+    "mysql": "^2.18.1"
   }
 }
