--- a/Server/package.json
+++ b/Server/package.json
@@ -7,9 +7,11 @@
     "test": "TODO: testing in development",
     "start": "node index.js"
   },
-  "author": "GiovanniRasera",
+  "author": "GiovanniRasera and Lorenzo Mancini",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "latest",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "lodash": "^4.17.21",
