tests: add folder

--- a/Server/Makefile
+++ b/Server/Makefile
@@ -2,13 +2,13 @@ run:
 	npm start
 
 test:
-	./runtest.py tests 0
+	./runtest.py tests/apitests 0
 
 test_out:
-	./runtest.py tests 1
+	./runtest.py tests/apitests 1
 
 test_login:
 	./runtest.py tests/logintests 1
 
 stress:
-	./runstress.py tests 0
+	./runstress.py tests/apitests 
