--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "https": "^1.0.0",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1"
   }
