--- a/saily/pubspec.yaml
+++ b/saily/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   syncfusion_flutter_gauges: ^26.2.14
   animated_battery_gauge: ^0.2.0
   dart_either: ^2.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
