--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "https": "^1.0.0",
     "lodash": "^4.17.21",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "redis": "^4.7.0"
   }
 }
