database: add funcition to check boat credentials

--- a/ServerApi/Makefile
+++ b/ServerApi/Makefile
@@ -1,8 +1,11 @@
 run:
 	npm start
 
-test:
-	./runtest.py tests/apitests 0
+test_all:
+	make test_out
+	make test_boats
+	make test_login
+	make test_local_database
 
 test_out:
 	./runtest.py tests/apitests 1
@@ -12,6 +15,7 @@ test_boats:
 
 test_login:
 	./runtest.py tests/logintests 1
+
 
 test_local_database:
 	./runtest.py tests/databasetests 1
