--- a/ServerApi/package.json
+++ b/ServerApi/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "TODO: testing in development",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start2": "node index.js 8780"
   },
   "author": "GiovanniRasera and Lorenzo Mancini",
   "license": "ISC",
