--- a/ServerApi/package.json
+++ b/ServerApi/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "TODO: testing in development",
-    "start": "node index.js",
-    "start2": "node index.js 8780"
+    "start": "node index.js"
   },
   "author": "GiovanniRasera and Lorenzo Mancini",
   "license": "ISC",
