--- a/Server/Api/compose.yaml
+++ b/Server/Api/compose.yaml
@@ -1,4 +1,5 @@
 version: "2"
+
 services:
   mysqldatabase: 
     image: "mysql:8.0.39"
@@ -9,6 +10,8 @@ services:
       - ./server/Saily/Database:/home
     ports: 
       - "3306:3306"
+    networks:
+      - node-to-database-network
 
   mynodeserver:
     image: "node:20.12.2"
@@ -23,3 +26,10 @@ services:
     command: "npm start"
     depends_on:
       - mysqldatabase
+    networks:
+      - node-to-database-network
+    links:
+      -mysqldatabase:databasehostname
+    
+networks:
+  node-to-database-network:
