--- a/ServerApi/package.json
+++ b/ServerApi/package.json
@@ -17,6 +17,7 @@
     "https": "^1.0.0",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "simplex-noise": "^4.0.3"
   }
 }
