iot: implementing sender

--- a/IOTSender/tests/CMakeLists.txt
+++ b/IOTSender/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(my_project)
+project(test_iot_sender)
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 23)
