commands: curl data sender

--- a/IOTSender/.vscode/settings.json
+++ b/IOTSender/.vscode/settings.json
@@ -76,7 +76,25 @@
         "vector": "cpp",
         "algorithm": "cpp",
         "ranges": "cpp",
-        "expected": "cpp"
+        "expected": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp"
     },
     "cmake.sourceDirectory": "/home/fdsa/repos/CleanArchitectureDesign/clean_arch_cpp/src",
     "cmake.configureOnOpen": true
